# GildedRoses

./: README.md  gilded_rose.py  pyproject.toml  requirements.txt  test_gilded_rose.py  texttest_gilded_rose.py
