[tool.poetry]
name = "gildedroses"
version = "0.1.0"
description = ""
authors = ["LaurieHC <lhumphriescable@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.2.2"
approvaltests = "^12.2.1"
pytest-approvaltests = "^0.2.4"
coverage = "^7.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
